# f1_rl

./: pyproject.toml
configs/lab/: f1-strategy-deep-qwen30b-instruct-noeval.toml  f1-strategy-deep-qwen30b-instruct.toml  f1-strategy-deep-qwen30b-thinking.toml  f1-strategy-deep-qwen4b-instruct.toml  f1-strategy-deep-qwen4b-thinking.toml  f1-strategy-deep.toml  f1-strategy-profound-intellect3.toml  f1-strategy-profound-llama3b.toml  f1-strategy-profound-qwen06b.toml  f1-strategy-profound-qwen30b.toml  f1-strategy-profound-qwen4b-thinking.toml  f1-strategy-profound-smollm3b.toml  f1-strategy-profound.toml  f1-strategy.toml
environments/f1_strategy/: README.md  f1_strategy.py  pyproject.toml
environments/f1_strategy/.prime/: .env-metadata.json
environments/f1_strategy/data/: openf1_scenarios.jsonl  stress_scenarios.jsonl
environments/f1_strategy/reports/: .gitkeep
environments/f1_strategy/scripts/: build_openf1_dataset.py  render_ablations.py  render_baselines.py  run_ablations.py  run_baselines.py  summarize_eval.py
environments/f1_strategy/tests/: test_f1_strategy.py
